export default {
  configuration_app_version: 'Versión de aplicación',
  configuration_about: 'Acerca de Abacus',
  configuration_clear_option: 'Borrar datos y restablecer aplicación',
  configuration_clear_confirm_button: 'Borrar ahora',
  configuration_clear_alert_title: '¿Estás seguro/a?',
  configuration_clear_alert_text: 'Limpiar el cache eliminará:\n'
    + 'configuraciones locales\n'
    + 'Secreto & ID del Oauth Client\n'
    + 'URL de tu instancia',
  cancel: 'Cancelar',
  configuration_security: 'Seguridad',
  configuration_share_feedback: 'Compartir Feedback',
  configuration_report_issue: 'Reportar Problema',
  configuration_sources: 'Fuentes',
  configuration_debug: 'Depurar',
  configuration_get_help: 'Conseguir Ayuda',
  assetsHistoryCharts_chart_works: 'Este gráfico funciona de forma óptima con hasta 4 cuentas.',
  assetsHistoryCharts_change_preferences: 'clica aquí',
  assetsHistoryCharts_choose_preferences_text: 'para escoger tus cuentas preferidas en los ajustes de Firefly III:',
  assetsHistoryCharts_home_screen: 'Pantalla de inicio',
  transaction_form_description_required: 'La descripción es requerida.',
  transaction_form_description_short: 'La descripción es demasiado corta.',
  transaction_form_amount_required: 'La cantidad es requerida.',
  transaction_form_description_label: 'Descripción',
  transaction_form_sourceAccount_label: 'Cuenta de origen',
  transaction_form_destinationAccount_label: 'Cuenta de destino',
  transaction_form_date_label: 'Fecha',
  transaction_form_amount_label: 'Cantidad',
  transaction_form_category_label: 'Categoría',
  transaction_form_budget_label: 'Presupuesto',
  transaction_form_reset_button: 'Restablecer',
  transaction_form_submit_button: 'Enviar',
  transaction_list_alert_title: '¿Estás seguro/a?',
  transaction_list_alert_text: 'Esta transacción será permanentemente eliminada:',
  transaction_list_delete_button: 'Eliminar',
  transaction_list_cancel_button: 'Cancelar',
  auth_form_url_label: 'URL del backend de Firefly III',
  auth_form_url_help: "sin '/' al final.",
  auth_form_url_placeholder: "URL del backend de Firefly III (sin '/' al final)",
  auth_form_oauth_clientId: 'ID de Oauth Client',
  auth_form_oauth_client_secret: 'Secreto de Oauth Client',
  auth_form_secrets_help_message: 'Todos los secretos están almacenados en secure storage.',
  auth_form_set_redirect: 'Establecer URL de redirección a:',
  auth_form_need_help: '¿Necesitas ayuda?',
  auth_form_submit_button_initial: 'Iniciar sesión',
  auth_form_submit_button_loading: 'Enviando...',
  home_accounts: 'Cuentas',
  layout_new_update_header: 'Nueva Actualización Disponible',
  layout_new_update_body_text: 'Siempre puedes actualizar más tarde en la pestaña de Ajustes.',
  layout_new_update_cancel_button: 'Cancelar',
  layout_new_update_update_button: 'Actualizar ahora',
  transaction_screen_title: 'Nueva transacción',
  navigation_home_tab: 'Inicio',
  navigation_chart_tab: 'Gráficos',
  navigation_create_tab: 'Crear',
  navigation_transactions_tab: 'Transacciones',
  navigation_settings_tab: 'Ajustes',
  transaction_form_type_withdrawal: 'Retirar',
  transaction_form_type_deposit: 'Depositar',
  transaction_form_type_transfer: 'Transferir',

  // from 0.7.0
  home_budgets: 'Presupuestos',

  // from X.X.X
  bills_paid: 'Pagado hasta',
  due_by: 'Vence el',
  date_unavailable: 'hasta nuevo aviso',

  // from 0.19.0
  configuration_theme: 'Personalización',
  configuration_theme_selection: 'Cambiar tema de color',
  configuration_theme_title: 'Temas de color',
};
