...
  const { colors } = useThemeColors();
  const selectedBrandStyle = useSelector((state: RootState) => state.configuration.selectedBrandStyle || colors.brandStyleOrange);

  return (
    <AStack justifyContent="flex-start">
      <AIconButton
        testID="navigation_create_transaction"
        backgroundColor={selectedBrandStyle}
        icon={<AntDesign name="plus" color="white" size={22} />}
        onPress={() => navigation.dispatch(
          CommonActions.navigate({
            name: 'TransactionCreateScreen',
          }),
...
