...
  const earned = useSelector((state: RootState) => state.firefly.spent);
  const currentCode = useSelector((state: RootState) => state.currencies.currentCode);
  const loading = useSelector((state: RootState) => state.loading.effects.firefly.getNetWorth?.loading);
  const dispatch = useDispatch<RootDispatch>();

  return useMemo(() => (
    <View testID="home_screen_net_worth">
      <Pressable onPress={() => dispatch.configuration.setHideBalance(!hideBalance)}>
        {!hideBalance && (
          <AView style={{
            height: 90,
            width: 300,
            justifyContent: 'center',
...
